# openfwi_plus_fastapi

./: .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  pytest.ini
app/: main.py
app/core/: api_metadata.py  config.py  dependencies.py  exceptions.py  limiter.py  logging.py  security.py
app/routers/: dependencies.py  inference.py  models.py
app/schemas/: inference.py  model.py
app/services/: model_loader.py  model_registry.py
criterion/: combined_loss.py  kl_div.py  perceptual_loss.py  structural_similarity_loss.py
data/: dataloader.py  scalers.py
model/backbone/: UNet.py  resnet.py  utils.py  vision_mamba.py
model/decoder/: decoder_unet.py
model/full_model_defs/: models.py
model/latents/: gaussian_latents.py
output/training_run_long_plus_warmup_curvefault_a/: config.json  events.out.tfevents.1752131277.ross-Precision-7740.19572.0.v2
output/training_run_long_plus_warmup_curvevel_a/: config.json  events.out.tfevents.1752177115.ross-Precision-7740.226250.0.v2  events.out.tfevents.1752177394.ross-Precision-7740.228340.0.v2
output/training_run_long_plus_warmup_flatfault_a/: config.json  events.out.tfevents.1751140929.ross-Precision-7740.1047857.0.v2  events.out.tfevents.1752031854.ross-Precision-7740.10588.0.v2  events.out.tfevents.1752032084.ross-Precision-7740.23258.0.v2  events.out.tfevents.1752032292.ross-Precision-7740.26356.0.v2  events.out.tfevents.1752032505.ross-Precision-7740.29515.0.v2  (+4 more)
tests/: conftest.py
tests/api/: test_main.py  (+2 more)
train/: config.py  metrics.py  setup.py  train_loop.py  utils.py
(+68 files in other folders)
